added more service area pages

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,21 @@
 {
   "redirects": [
+    { "source": "/about-us", "destination": "/about", "permanent": true },
+    { "source": "/about-us/", "destination": "/about", "permanent": true },
+    { "source": "/mobile-detailing-austin", "destination": "/austin-auto-detailing", "permanent": true },
+    { "source": "/mobile-detailing-austin/", "destination": "/austin-auto-detailing", "permanent": true },
+    { "source": "/paint-correction-austin", "destination": "/paint-correction", "permanent": true },
+    { "source": "/paint-correction-austin/", "destination": "/paint-correction", "permanent": true },
+    { "source": "/ceramic-coating-austin", "destination": "/ceramic-coatings", "permanent": true },
+    { "source": "/ceramic-coating-austin/", "destination": "/ceramic-coatings", "permanent": true },
+    { "source": "/bike-detailing-austin-tx", "destination": "/auto-detailing", "permanent": true },
+    { "source": "/bike-detailing-austin-tx/", "destination": "/auto-detailing", "permanent": true },
+    { "source": "/locations/car-detailing-briarcliff-tx", "destination": "/briarcliff-auto-detailing", "permanent": true },
+    { "source": "/locations/car-detailing-briarcliff-tx/", "destination": "/briarcliff-auto-detailing", "permanent": true },
+    { "source": "/locations/car-detailing-lago-vista-tx", "destination": "/lago-vista-auto-detailing", "permanent": true },
+    { "source": "/locations/car-detailing-lago-vista-tx/", "destination": "/lago-vista-auto-detailing", "permanent": true },
+    { "source": "/locations/car-detailing-steiner-ranch-tx", "destination": "/steiner-ranch-auto-detailing", "permanent": true },
+    { "source": "/locations/car-detailing-steiner-ranch-tx/", "destination": "/steiner-ranch-auto-detailing", "permanent": true },
     { "source": "/contact-us", "destination": "/contact", "permanent": true },
     { "source": "/contact-us/", "destination": "/contact", "permanent": true },
     { "source": "/category/uncategorized", "destination": "/", "permanent": true },
